--- a/.github/workflows/_rust_lints.yml
+++ b/.github/workflows/_rust_lints.yml
@@ -1,10 +1,14 @@
 name: Rust lints
 
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      isRust:
+        type: boolean
 
 jobs:
   rustfmt:
-    if: always()
+    if: always() && inputs.isRust
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -14,7 +18,7 @@ jobs:
         run: cargo +nightly ci-fmt
 
   cargo-deny:
-    if: always()
+    if: always() && inputs.isRust
     name: cargo-deny (advisories, licenses, bans, ...)
     runs-on: [self-hosted]
     steps:
@@ -22,7 +26,7 @@ jobs:
       - uses: EmbarkStudios/cargo-deny-action@v1
 
   clippy:
-    if: always()
+    if: always() && inputs.isRust
     needs:
       - rustfmt
       - cargo-deny
