--- a/.github/workflows/_rust.yml
+++ b/.github/workflows/_rust.yml
@@ -2,6 +2,10 @@ name: Rust crates
 
 on: workflow_call
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/develop' }}
+
 env:
   CARGO_TERM_COLOR: always
   # Disable incremental compilation.
