fix: Do not publish the ui kit

--- a/apps/ui-kit/package.json
+++ b/apps/ui-kit/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@iota/apps-ui-kit",
+    "private": true,
     "version": "0.0.1-rc.1",
     "repository": {
         "type": "git",
