--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -4,7 +4,7 @@
 	"commit": false,
 	"fixed": [],
 	"linked": [],
-	"access": "public",
+	"access": "restricted",
 	"baseBranch": "develop",
 	"updateInternalDependencies": "minor",
 	"privatePackages": false,
