--- a/.github/workflows/changesets-publish.yml
+++ b/.github/workflows/changesets-publish.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Publish packages
-        run: pnpm changeset-publish
+        run: pnpm changeset-publish --no-git-tag
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN_RELEASE }}
