do not release iotans for real

--- a/sdk/iotans-toolkit/package.json
+++ b/sdk/iotans-toolkit/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iota/iotans-toolkit",
-    "private": false,
+    "private": true,
     "author": "IOTA Foundation <contact@iota.org>",
     "description": "IotaNS TypeScript SDK",
     "version": "0.0.0",
