--- a/.github/workflows/_external_rust_lints.yml
+++ b/.github/workflows/_external_rust_lints.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
-      - uses: EmbarkStudios/cargo-deny-action@8371184bd11e21dcf8ac82ebf8c9c9f74ebf7268
+      - uses: EmbarkStudios/cargo-deny-action@v2
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
           use-git-cli: true
