--- a/docker/pg-services-local/docker-compose.yaml
+++ b/docker/pg-services-local/docker-compose.yaml
@@ -84,6 +84,32 @@ services:
       - postgres
       - indexer-sync
 
+  analytical-worker:
+    image: iota-indexer
+    container_name: analytical-worker
+    hostname: analytical-worker
+    restart: on-failure
+    networks:
+      iota-network:
+    environment:
+      - RUST_BACKTRACE=1
+      - RUST_LOG=info
+      - RPC_WORKER_THREAD=12
+    command:
+      - /usr/local/bin/iota-indexer
+      - --db-url=postgres://iota_indexer:iota_indexer@postgres:5432/iota_indexer
+      - --rpc-client-url=http://local-network:9000
+      - --client-metric-port=9181
+      - --rpc-server-port=9000
+      - --analytical-worker
+    ports:
+      - "127.0.0.1:9006:9000/tcp"
+      - "127.0.0.1:9184:9181/tcp"
+    depends_on:
+      - local-network
+      - postgres
+      - indexer-sync
+
   graphql-server:
     image: iota-graphql-rpc
     build:
