fix(CI): Gate mysticeti tests like rust tests

--- a/.github/workflows/_mysticeti_tests.yml
+++ b/.github/workflows/_mysticeti_tests.yml
@@ -62,6 +62,7 @@ jobs:
 
   test:
     name: Test ${{ matrix.components }}
+    if: needs.changes.outputs.components != '[]'
     timeout-minutes: 45
     env:
       # Tests written with #[sim_test] are often flaky if run as #[tokio::test] - this var
