chore: ignore @iota/create-dapp

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -17,6 +17,7 @@
 		"@iota/core",
 		"@iota/ui",
 		"@iota/apps-ui-kit",
+		"@iota/create-dapp",
 		"sponsored-transactions",
 		"kiosk-demo",
 		"kiosk-cli",
