--- a/.github/workflows/split-cluster.yml
+++ b/.github/workflows/split-cluster.yml
@@ -2,7 +2,7 @@ name: Split Cluster Check
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, 'ready_for_review']
+    types: [opened, synchronize, reopened, ready_for_review]
   push:
     branches:
       - main
