--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -27,6 +27,7 @@
         "@growthbook/growthbook": "^1.0.0",
         "@growthbook/growthbook-react": "^1.0.0",
         "@headlessui/react": "^1.7.15",
+        "@iota/apps-ui-kit": "workspace:*",
         "@iota/core": "workspace:*",
         "@iota/dapp-kit": "workspace:*",
         "@iota/icons": "workspace:*",
