--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,170 +2,170 @@
 resolver = "2"
 
 exclude = [
-  "external-crates/move/crates/bytecode-interpreter-crypto",
-  "external-crates/move/crates/bytecode-interpreter-testsuite",
-  "external-crates/move/crates/bytecode-verifier-libfuzzer",
-  "external-crates/move/crates/bytecode-verifier-tests",
-  "external-crates/move/crates/bytecode-verifier-transactional-tests",
-  "external-crates/move/crates/enum-compat-util",
-  "external-crates/move/crates/invalid-mutations",
-  "external-crates/move/crates/language-benchmarks",
-  "external-crates/move/crates/module-generation",
-  "external-crates/move/crates/move-abstract-stack",
-  "external-crates/move/crates/move-analyzer",
-  "external-crates/move/crates/move-binary-format",
-  "external-crates/move/crates/move-borrow-graph",
-  "external-crates/move/crates/move-bytecode-source-map",
-  "external-crates/move/crates/move-bytecode-utils",
-  "external-crates/move/crates/move-bytecode-verifier",
-  "external-crates/move/crates/move-bytecode-viewer",
-  "external-crates/move/crates/move-cli",
-  "external-crates/move/crates/move-command-line-common",
-  "external-crates/move/crates/move-compiler",
-  "external-crates/move/crates/move-compiler-transactional-tests",
-  "external-crates/move/crates/move-core-types",
-  "external-crates/move/crates/move-coverage",
-  "external-crates/move/crates/move-disassembler",
-  "external-crates/move/crates/move-docgen",
-  "external-crates/move/crates/move-errmapgen",
-  "external-crates/move/crates/move-explain",
-  "external-crates/move/crates/move-ir-compiler",
-  "external-crates/move/crates/move-ir-compiler-transactional-tests",
-  "external-crates/move/crates/move-ir-to-bytecode",
-  "external-crates/move/crates/move-ir-to-bytecode-syntax",
-  "external-crates/move/crates/move-ir-types",
-  "external-crates/move/crates/move-model",
-  "external-crates/move/crates/move-package",
-  "external-crates/move/crates/move-proc-macros",
-  "external-crates/move/crates/move-prover",
-  "external-crates/move/crates/move-prover-test-utils",
-  "external-crates/move/crates/move-read-write-set-types",
-  "external-crates/move/crates/move-stackless-bytecode",
-  "external-crates/move/crates/move-stackless-bytecode-interpreter",
-  "external-crates/move/crates/move-stdlib",
-  "external-crates/move/crates/move-symbol-pool",
-  "external-crates/move/crates/move-transactional-test-runner",
-  "external-crates/move/crates/move-unit-test",
-  "external-crates/move/crates/move-vm-config",
-  "external-crates/move/crates/move-vm-integration-tests",
-  "external-crates/move/crates/move-vm-profiler",
-  "external-crates/move/crates/move-vm-runtime",
-  "external-crates/move/crates/move-vm-test-utils",
-  "external-crates/move/crates/move-vm-transactional-tests",
-  "external-crates/move/crates/move-vm-types",
-  "external-crates/move/crates/serializer-tests",
-  "external-crates/move/crates/test-generation",
-  "external-crates/move/move-execution/v0/crates/move-bytecode-verifier",
-  "external-crates/move/move-execution/v0/crates/move-stdlib",
-  "external-crates/move/move-execution/v0/crates/move-vm-runtime",
-  "sdk/move-bytecode-template",
+    "external-crates/move/crates/bytecode-interpreter-crypto",
+    "external-crates/move/crates/bytecode-interpreter-testsuite",
+    "external-crates/move/crates/bytecode-verifier-libfuzzer",
+    "external-crates/move/crates/bytecode-verifier-tests",
+    "external-crates/move/crates/bytecode-verifier-transactional-tests",
+    "external-crates/move/crates/enum-compat-util",
+    "external-crates/move/crates/invalid-mutations",
+    "external-crates/move/crates/language-benchmarks",
+    "external-crates/move/crates/module-generation",
+    "external-crates/move/crates/move-abstract-stack",
+    "external-crates/move/crates/move-analyzer",
+    "external-crates/move/crates/move-binary-format",
+    "external-crates/move/crates/move-borrow-graph",
+    "external-crates/move/crates/move-bytecode-source-map",
+    "external-crates/move/crates/move-bytecode-utils",
+    "external-crates/move/crates/move-bytecode-verifier",
+    "external-crates/move/crates/move-bytecode-viewer",
+    "external-crates/move/crates/move-cli",
+    "external-crates/move/crates/move-command-line-common",
+    "external-crates/move/crates/move-compiler",
+    "external-crates/move/crates/move-compiler-transactional-tests",
+    "external-crates/move/crates/move-core-types",
+    "external-crates/move/crates/move-coverage",
+    "external-crates/move/crates/move-disassembler",
+    "external-crates/move/crates/move-docgen",
+    "external-crates/move/crates/move-errmapgen",
+    "external-crates/move/crates/move-explain",
+    "external-crates/move/crates/move-ir-compiler",
+    "external-crates/move/crates/move-ir-compiler-transactional-tests",
+    "external-crates/move/crates/move-ir-to-bytecode",
+    "external-crates/move/crates/move-ir-to-bytecode-syntax",
+    "external-crates/move/crates/move-ir-types",
+    "external-crates/move/crates/move-model",
+    "external-crates/move/crates/move-package",
+    "external-crates/move/crates/move-proc-macros",
+    "external-crates/move/crates/move-prover",
+    "external-crates/move/crates/move-prover-test-utils",
+    "external-crates/move/crates/move-read-write-set-types",
+    "external-crates/move/crates/move-stackless-bytecode",
+    "external-crates/move/crates/move-stackless-bytecode-interpreter",
+    "external-crates/move/crates/move-stdlib",
+    "external-crates/move/crates/move-symbol-pool",
+    "external-crates/move/crates/move-transactional-test-runner",
+    "external-crates/move/crates/move-unit-test",
+    "external-crates/move/crates/move-vm-config",
+    "external-crates/move/crates/move-vm-integration-tests",
+    "external-crates/move/crates/move-vm-profiler",
+    "external-crates/move/crates/move-vm-runtime",
+    "external-crates/move/crates/move-vm-test-utils",
+    "external-crates/move/crates/move-vm-transactional-tests",
+    "external-crates/move/crates/move-vm-types",
+    "external-crates/move/crates/serializer-tests",
+    "external-crates/move/crates/test-generation",
+    "external-crates/move/move-execution/v0/crates/move-bytecode-verifier",
+    "external-crates/move/move-execution/v0/crates/move-stdlib",
+    "external-crates/move/move-execution/v0/crates/move-vm-runtime",
+    "sdk/move-bytecode-template",
 ]
 
 members = [
-  "consensus/config",
-  "consensus/core",
-  "crates/iota",
-  "crates/iota-adapter-transactional-tests",
-  "crates/iota-analytics-indexer",
-  "crates/iota-analytics-indexer-derive",
-  "crates/iota-archival",
-  "crates/iota-authority-aggregation",
-  "crates/iota-aws-orchestrator",
-  "crates/iota-benchmark",
-  "crates/iota-cluster-test",
-  "crates/iota-common",
-  "crates/iota-config",
-  "crates/iota-core",
-  "crates/iota-cost",
-  "crates/iota-data-ingestion",
-  "crates/iota-data-ingestion-core",
-  "crates/iota-e2e-tests",
-  "crates/iota-enum-compat-util",
-  "crates/iota-faucet",
-  "crates/iota-framework",
-  "crates/iota-framework-snapshot",
-  "crates/iota-framework-tests",
-  "crates/iota-genesis-builder",
-  "crates/iota-graphql-e2e-tests",
-  "crates/iota-graphql-rpc",
-  "crates/iota-graphql-rpc-client",
-  "crates/iota-graphql-rpc-headers",
-  "crates/iota-indexer",
-  "crates/iota-json",
-  "crates/iota-json-rpc",
-  "crates/iota-json-rpc-api",
-  "crates/iota-json-rpc-tests",
-  "crates/iota-json-rpc-types",
-  "crates/iota-keys",
-  "crates/iota-light-client",
-  "crates/iota-macros",
-  "crates/iota-metric-checker",
-  "crates/iota-metrics",
-  "crates/iota-move",
-  "crates/iota-move-build",
-  "crates/iota-network",
-  "crates/iota-network-stack",
-  "crates/iota-node",
-  "crates/iota-open-rpc",
-  "crates/iota-open-rpc-macros",
-  "crates/iota-package-resolver",
-  "crates/iota-proc-macros",
-  "crates/iota-protocol-config",
-  "crates/iota-protocol-config-macros",
-  "crates/iota-replay",
-  "crates/iota-rest-api",
-  "crates/iota-rosetta",
-  "crates/iota-rpc-loadgen",
-  "crates/iota-sdk",
-  "crates/iota-simulator",
-  "crates/iota-single-node-benchmark",
-  "crates/iota-snapshot",
-  "crates/iota-source-validation",
-  "crates/iota-source-validation-service",
-  "crates/iota-storage",
-  "crates/iota-surfer",
-  "crates/iota-swarm",
-  "crates/iota-swarm-config",
-  "crates/iota-test-transaction-builder",
-  "crates/iota-test-validator",
-  "crates/iota-tls",
-  "crates/iota-tool",
-  "crates/iota-transaction-builder",
-  "crates/iota-transaction-checks",
-  "crates/iota-transactional-test-runner",
-  "crates/iota-types",
-  "crates/iota-upgrade-compatibility-transactional-tests",
-  "crates/iota-util-mem",
-  "crates/iota-util-mem-derive",
-  "crates/iota-verifier-transactional-tests",
-  "crates/prometheus-closure-metric",
-  "crates/shared-crypto",
-  "crates/simulacrum",
-  "crates/telemetry-subscribers",
-  "crates/test-cluster",
-  "crates/transaction-fuzzer",
-  "crates/typed-store",
-  "crates/typed-store-derive",
-  "crates/typed-store-error",
-  "docs/examples/rust",
-  "iota-execution",
-  "iota-execution/cut",
-  "iota-execution/latest/iota-adapter",
-  "iota-execution/latest/iota-move-natives",
-  "iota-execution/latest/iota-verifier",
-  "iota-execution/v0/iota-adapter",
-  "iota-execution/v0/iota-move-natives",
-  "iota-execution/v0/iota-verifier",
-  "narwhal/config",
-  "narwhal/crypto",
-  "narwhal/executor",
-  "narwhal/network",
-  "narwhal/node",
-  "narwhal/primary",
-  "narwhal/storage",
-  "narwhal/test-utils",
-  "narwhal/types",
-  "narwhal/worker",
+    "consensus/config",
+    "consensus/core",
+    "crates/iota",
+    "crates/iota-adapter-transactional-tests",
+    "crates/iota-analytics-indexer",
+    "crates/iota-analytics-indexer-derive",
+    "crates/iota-archival",
+    "crates/iota-authority-aggregation",
+    "crates/iota-aws-orchestrator",
+    "crates/iota-benchmark",
+    "crates/iota-cluster-test",
+    "crates/iota-common",
+    "crates/iota-config",
+    "crates/iota-core",
+    "crates/iota-cost",
+    "crates/iota-data-ingestion",
+    "crates/iota-data-ingestion-core",
+    "crates/iota-e2e-tests",
+    "crates/iota-enum-compat-util",
+    "crates/iota-faucet",
+    "crates/iota-framework",
+    "crates/iota-framework-snapshot",
+    "crates/iota-framework-tests",
+    "crates/iota-genesis-builder",
+    "crates/iota-graphql-e2e-tests",
+    "crates/iota-graphql-rpc",
+    "crates/iota-graphql-rpc-client",
+    "crates/iota-graphql-rpc-headers",
+    "crates/iota-indexer",
+    "crates/iota-json",
+    "crates/iota-json-rpc",
+    "crates/iota-json-rpc-api",
+    "crates/iota-json-rpc-tests",
+    "crates/iota-json-rpc-types",
+    "crates/iota-keys",
+    "crates/iota-light-client",
+    "crates/iota-macros",
+    "crates/iota-metric-checker",
+    "crates/iota-metrics",
+    "crates/iota-move",
+    "crates/iota-move-build",
+    "crates/iota-network",
+    "crates/iota-network-stack",
+    "crates/iota-node",
+    "crates/iota-open-rpc",
+    "crates/iota-open-rpc-macros",
+    "crates/iota-package-resolver",
+    "crates/iota-proc-macros",
+    "crates/iota-protocol-config",
+    "crates/iota-protocol-config-macros",
+    "crates/iota-replay",
+    "crates/iota-rest-api",
+    "crates/iota-rosetta",
+    "crates/iota-rpc-loadgen",
+    "crates/iota-sdk",
+    "crates/iota-simulator",
+    "crates/iota-single-node-benchmark",
+    "crates/iota-snapshot",
+    "crates/iota-source-validation",
+    "crates/iota-source-validation-service",
+    "crates/iota-storage",
+    "crates/iota-surfer",
+    "crates/iota-swarm",
+    "crates/iota-swarm-config",
+    "crates/iota-test-transaction-builder",
+    "crates/iota-test-validator",
+    "crates/iota-tls",
+    "crates/iota-tool",
+    "crates/iota-transaction-builder",
+    "crates/iota-transaction-checks",
+    "crates/iota-transactional-test-runner",
+    "crates/iota-types",
+    "crates/iota-upgrade-compatibility-transactional-tests",
+    "crates/iota-util-mem",
+    "crates/iota-util-mem-derive",
+    "crates/iota-verifier-transactional-tests",
+    "crates/prometheus-closure-metric",
+    "crates/shared-crypto",
+    "crates/simulacrum",
+    "crates/telemetry-subscribers",
+    "crates/test-cluster",
+    "crates/transaction-fuzzer",
+    "crates/typed-store",
+    "crates/typed-store-derive",
+    "crates/typed-store-error",
+    "docs/examples/rust",
+    "iota-execution",
+    "iota-execution/cut",
+    "iota-execution/latest/iota-adapter",
+    "iota-execution/latest/iota-move-natives",
+    "iota-execution/latest/iota-verifier",
+    "iota-execution/v0/iota-adapter",
+    "iota-execution/v0/iota-move-natives",
+    "iota-execution/v0/iota-verifier",
+    "narwhal/config",
+    "narwhal/crypto",
+    "narwhal/executor",
+    "narwhal/network",
+    "narwhal/node",
+    "narwhal/primary",
+    "narwhal/storage",
+    "narwhal/test-utils",
+    "narwhal/types",
+    "narwhal/worker",
 ]
 
 [workspace.package]
@@ -217,7 +217,7 @@ async-trait = "0.1"
 aws-config = { version = "1.5", features = ["behavior-version-latest"] }
 axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2", "json", "matched-path", "original-uri", "form", "query", "ws"] }
 axum-extra = "0.9"
-axum-server = { version = "0.6.0", default-features = false, features = ["tls-rustls"] }
+axum-server = { version = "0.7.1", default-features = false, features = ["tls-rustls"] }
 backoff = { version = "0.4", features = ["tokio"] }
 base64 = "0.22"
 base64-url = "3.0"
@@ -243,6 +243,7 @@ datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", r
 derivative = "2.2"
 diesel = { version = "2.2", features = ["chrono", "postgres", "r2d2", "serde_json", "64-column-tables", "i-implement-a-third-party-backend-and-opt-into-breaking-changes", "postgres_backend"] }
 dirs = "5.0"
+ed25519 = { version = "1.5.0", features = ["pkcs8", "alloc", "zeroize"] }
 ed25519-consensus = { version = "2.0", features = ["serde"] }
 either = "1.8"
 enum_dispatch = "^0.3"
@@ -281,6 +282,7 @@ num_enum = "0.7"
 object_store = { version = "0.10", features = ["aws", "gcp", "azure", "http"] }
 once_cell = "1.18"
 parking_lot = "0.12"
+pkcs8 = { version = "0.9.0", features = ["std"] }
 pretty_assertions = "1.3"
 proc-macro2 = "1.0"
 prometheus = "0.13"
@@ -290,11 +292,13 @@ prost = "0.13"
 quinn-proto = "0.10" # Version 0.11 is incompatable with prometheus
 quote = "1.0"
 rand = "0.8"
+rcgen = "0.13.1"
 regex = "1.7"
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 roaring = "0.10"
 rocksdb = { version = "0.22", features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"], default-features = false }
 rstest = "0.22"
+rustls = { version = "0.23.10", features = ["ring"] }
 schemars = { version = "0.8", features = ["either"] }
 scopeguard = "1.1"
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -316,6 +320,7 @@ tempfile = "3.12"
 test-fuzz = "5.2"
 thiserror = "1.0"
 tokio = "1.36"
+tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
 tokio-stream = { version = "0.1", features = ["sync", "net"] }
 tokio-util = "0.7"
 toml = { version = "0.8", features = ["preserve_order"] }
@@ -324,11 +329,14 @@ tonic-build = { version = "0.12", features = ["prost", "transport"] }
 tonic-health = "0.12"
 tower = { version = "0.4", features = ["full", "util", "timeout", "load-shed", "limit"] }
 tower-http = { version = "0.5", features = ["cors", "full", "trace", "set-header", "propagate-header"] }
+tower-layer = "0.3.2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "smallvec", "fmt", "ansi", "time", "json", "registry", "env-filter"] }
 unescape = "0.1"
 url = "2.3"
 uuid = { version = "1.1", features = ["v4", "fast-rng"] }
+webpki = { version = "0.102.4", package = "rustls-webpki", features = ["alloc", "std"] }
+x509-parser = "0.14.0"
 
 # Move dependencies
 move-abstract-stack = { path = "external-crates/move/crates/move-abstract-stack" }
