--- a/crates/iota-node/Cargo.toml
+++ b/crates/iota-node/Cargo.toml
@@ -43,6 +43,7 @@ iota-protocol-config.workspace = true
 iota-rest-api.workspace = true
 iota-snapshot.workspace = true
 iota-storage.workspace = true
+iota-tls.workspace = true
 iota-types.workspace = true
 move-vm-profiler.workspace = true
 narwhal-network.workspace = true
