try `--break-system-packages`

--- a/.github/workflows/_external_rust_tests.yml
+++ b/.github/workflows/_external_rust_tests.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: taiki-e/install-action@nextest
       - name: Install python dependencies
-        run: pip install pyopenssl --upgrade
+        run: pip install pyopenssl --upgrade --break-system-packages
       - name: cargo test
         run: >
           cargo nextest run
