--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -28,6 +28,7 @@
         "@growthbook/growthbook-react": "^1.0.0",
         "@headlessui/react": "^1.7.15",
         "@iota/apps-ui-kit": "workspace:*",
+        "@iota/ui-icons": "workspace:*",
         "@iota/core": "workspace:*",
         "@iota/dapp-kit": "workspace:*",
         "@iota/icons": "workspace:*",
