--- a/Cargo.toml
+++ b/Cargo.toml
@@ -217,6 +217,9 @@ async-trait = "0.1"
 aws-config = { version = "1.5", features = ["behavior-version-latest"] }
 axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2", "json", "matched-path", "original-uri", "form", "query", "ws"] }
 axum-extra = "0.9"
+axum-server = { version = "0.6.0", default-features = false, features = [
+    "tls-rustls",
+] }
 backoff = { version = "0.4", features = ["tokio"] }
 base64 = "0.22"
 base64-url = "3.0"
@@ -280,6 +283,7 @@ num_enum = "0.7"
 object_store = { version = "0.10", features = ["aws", "gcp", "azure", "http"] }
 once_cell = "1.18"
 parking_lot = "0.12"
+pkcs8 = { version = "0.9.0", features = ["std"] }
 pretty_assertions = "1.3"
 proc-macro2 = "1.0"
 prometheus = "0.13"
@@ -289,11 +293,13 @@ prost = "0.13"
 quinn-proto = "0.10" # Version 0.11 is incompatable with prometheus
 quote = "1.0"
 rand = "0.8"
+rcgen = "0.9.2"
 regex = "1.7"
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 roaring = "0.10"
 rocksdb = { version = "0.22", features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"], default-features = false }
 rstest = "0.22"
+rustls = { version = "0.23.10", features = ["ring"] }
 schemars = { version = "0.8", features = ["either"] }
 scopeguard = "1.1"
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -308,6 +314,7 @@ smallvec = "1.10"
 snap = "1.1"
 static_assertions = "1.1"
 strum = { version = "0.26", features = ["derive"] }
+strum_macros = "0.26.4"
 syn = { version = "1.0", features = ["full", "derive", "extra-traits"] }
 tabled = "0.12" # Version 0.16 is incompatable with ratatui
 tap = "1.0"
@@ -351,10 +358,10 @@ fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "fas
 fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "fastcrypto-zkp-v0.1.3", package = "fastcrypto-zkp" }
 
 # anemo dependencies
-anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
-anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
-anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
-anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
+anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "dbb5a074c2d25660525ab5d36d65ff0cb8051949" }
+anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "dbb5a074c2d25660525ab5d36d65ff0cb8051949" }
+anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "dbb5a074c2d25660525ab5d36d65ff0cb8051949" }
+anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "dbb5a074c2d25660525ab5d36d65ff0cb8051949" }
 
 ### Workspace Members ###
 iota = { path = "crates/iota" }
