--- a/consensus/core/Cargo.toml
+++ b/consensus/core/Cargo.toml
@@ -21,9 +21,14 @@ dashmap.workspace = true
 enum_dispatch.workspace = true
 fastcrypto.workspace = true
 futures.workspace = true
+http.workspace = true
+hyper.workspace = true
+hyper-rustls.workspace = true
 iota-metrics.workspace = true
 iota-network-stack.workspace = true
 iota-protocol-config.workspace = true
+iota-tls.workspace = true
+itertools.workspace = true
 mockall.workspace = true
 parking_lot.workspace = true
 prometheus.workspace = true
