--- a/consensus/core/Cargo.toml
+++ b/consensus/core/Cargo.toml
@@ -21,13 +21,19 @@ dashmap.workspace = true
 enum_dispatch.workspace = true
 fastcrypto.workspace = true
 futures.workspace = true
+http.workspace = true
+hyper.workspace = true
+hyper-rustls.workspace = true
 iota-metrics.workspace = true
 iota-network-stack.workspace = true
 iota-protocol-config.workspace = true
+iota-tls.workspace = true
+itertools.workspace = true
 mockall.workspace = true
 parking_lot.workspace = true
 prometheus.workspace = true
 prost.workspace = true
+quinn-proto.workspace = true
 rand.workspace = true
 rustls.workspace = true
 serde.workspace = true
@@ -49,8 +55,8 @@ typed-store.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
-tempfile.workspace = true
 telemetry-subscribers.workspace = true
+tempfile.workspace = true
 
 [build-dependencies]
 anemo-build.workspace = true
