--- a/crates/telemetry-subscribers/Cargo.toml
+++ b/crates/telemetry-subscribers/Cargo.toml
@@ -17,15 +17,15 @@ console-subscriber = { version = "0.3", optional = true }
 crossterm.workspace = true
 futures.workspace = true
 once_cell.workspace = true
-opentelemetry = { version = "0.23", optional = true }
-opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic"], optional = true }
-opentelemetry-proto = { version = "0.6", optional = true }
-opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"], optional = true }
+opentelemetry = "0.23"
+opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic"] }
+opentelemetry-proto = "0.6"
+opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
 prometheus.workspace = true
 tokio = { workspace = true, features = ["full"] }
 tracing.workspace = true
 tracing-appender = "0.2"
-tracing-opentelemetry = { version = "0.24", optional = true }
+tracing-opentelemetry = "0.24"
 tracing-subscriber.workspace = true
 
 # must use same version as opentelemetry for tonic and prost, so we can't use from
@@ -34,15 +34,8 @@ prost = "0.12"
 tonic = "0.11"
 
 [features]
-default = ["otlp"]
+default = []
 tokio-console = ["console-subscriber"]
-otlp = [
-  "tracing-opentelemetry",
-  "opentelemetry",
-  "opentelemetry_sdk",
-  "opentelemetry-otlp",
-  "opentelemetry-proto",
-]
 
 [dev-dependencies]
 camino.workspace = true
