--- a/consensus/core/Cargo.toml
+++ b/consensus/core/Cargo.toml
@@ -23,6 +23,7 @@ fastcrypto.workspace = true
 futures.workspace = true
 http.workspace = true
 hyper.workspace = true
+hyper-util.workspace = true
 hyper-rustls.workspace = true
 iota-metrics.workspace = true
 iota-network-stack.workspace = true
