--- a/apps/wallet/src/manifest/manifest.json
+++ b/apps/wallet/src/manifest/manifest.json
@@ -39,6 +39,6 @@
         }
     ],
     "content_security_policy": {
-        "extension_pages": "default-src 'none'; object-src 'none'; connect-src *; font-src 'self' data: https://webassets-iota-vmmad.vercel.app; img-src * data:; media-src *; script-src 'self'; style-src 'self' 'unsafe-inline' https://webassets-iota-vmmad.vercel.app; base-uri 'self'; form-action 'none'; frame-ancestors 'none';"
+        "extension_pages": "default-src 'none'; object-src 'none'; connect-src *; font-src 'self' data: https://webassets-jfvmu6gsz-iota1.vercel.app https://webassets.iota.org; img-src * data:; media-src *; script-src 'self'; style-src 'self' 'unsafe-inline' https://webassets-jfvmu6gsz-iota1.vercel.app; base-uri 'self'; form-action 'none'; frame-ancestors 'none';"
     }
 }
