--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -27,11 +27,13 @@
         "@growthbook/growthbook": "^1.0.0",
         "@growthbook/growthbook-react": "^1.0.0",
         "@headlessui/react": "^1.7.15",
+        "@iota/apps-ui-kit": "workspace:*",
         "@iota/core": "workspace:*",
         "@iota/dapp-kit": "workspace:*",
         "@iota/icons": "workspace:*",
         "@iota/iota-sdk": "workspace:*",
         "@iota/ui": "workspace:*",
+        "@iota/ui-icons": "workspace:*",
         "@radix-ui/react-collapsible": "^1.0.3",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
         "@radix-ui/react-popover": "^1.0.6",
