feat(iota-json-rpc-api): Restore explorer metric endpoints (#1845)
* feat(iota-json-rpc-api): Add explorer endpoints back

* feat(iota-json-rpc-api): Add metric processors back

* refactor(iota-indexer): fix schema usages

* refactor(iota-indexer): redo `ExtendedApi` methods

* refactor(iota-indexer): Introduce analytical-worker in docker-compose

* refactor(iota-benchmark, iota-core): Fix format

* refactor: Adjust docker-compose params and ports

* refactor: Add missing documentation

* refactor: Explicit export

Co-authored-by: Konstantinos Demartinos <konstantinos.demartinos@iota.org>

* refactor: Move processors

* refactor: Regenerate OpenRPC spec

* refactor: Add license

* refactor: Fix import

* refactor: Remove outdated comment

* refactor: Add comments to clarify `address` vs `active_address` meaning

---------

Co-authored-by: Konstantinos Demartinos <konstantinos.demartinos@iota.org>

--- a/docker/pg-services-local/docker-compose.yaml
+++ b/docker/pg-services-local/docker-compose.yaml
@@ -84,6 +84,30 @@ services:
       - postgres
       - indexer-sync
 
+  indexer-analytics:
+    image: iota-indexer
+    container_name: indexer-analytics
+    hostname: indexer-analytics
+    restart: on-failure
+    networks:
+      iota-network:
+    environment:
+      - RUST_BACKTRACE=1
+      - RUST_LOG=info
+      - RPC_WORKER_THREAD=12
+    command:
+      - /usr/local/bin/iota-indexer
+      - --db-url=postgres://iota_indexer:iota_indexer@postgres:5432/iota_indexer
+      - --rpc-client-url=http://local-network:9000
+      - --client-metric-port=9181
+      - --analytical-worker
+    ports:
+      - "127.0.0.1:9184:9181/tcp"
+    depends_on:
+      - local-network
+      - postgres
+      - indexer-sync
+
   graphql-server:
     image: iota-graphql-rpc
     build:
