refactor(general): Remove IOTA Name Service

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -21,8 +21,7 @@
 		"sponsored-transactions",
 		"kiosk-demo",
 		"kiosk-cli",
-		"@iota/zklogin",
-		"@iota/iotans-toolkit"
+		"@iota/zklogin"
 	],
 	"___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
 		"onlyUpdatePeerDependentsWhenOutOfRange": true
