--- a/crates/iota-transactional-test-runner/Cargo.toml
+++ b/crates/iota-transactional-test-runner/Cargo.toml
@@ -10,6 +10,7 @@ description = "Move framework for Iota platform"
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
+base64.workspace = true
 bcs.workspace = true
 bimap = "0.6"
 clap.workspace = true
