Port newest version of Narwhal

--- a/narwhal/network/Cargo.toml
+++ b/narwhal/network/Cargo.toml
@@ -32,3 +32,4 @@ types = { path = "../types", package = "narwhal-types" }
 
 [dev-dependencies]
 bincode.workspace = true
+test-utils = { path = "../test-utils", package = "narwhal-test-utils" }
