Adjust part of the remaining code.

--- a/crates/iota-config/Cargo.toml
+++ b/crates/iota-config/Cargo.toml
@@ -24,6 +24,7 @@ serde_with.workspace = true
 serde_yaml.workspace = true
 tracing.workspace = true
 
+consensus-config.workspace = true
 iota-keys.workspace = true
 iota-protocol-config.workspace = true
 iota-types.workspace = true
