--- a/consensus/core/Cargo.toml
+++ b/consensus/core/Cargo.toml
@@ -24,6 +24,9 @@ futures.workspace = true
 http.workspace = true
 hyper.workspace = true
 hyper-util.workspace = true
+hyper-rustls.workspace = true
+iota-common.workspace = true
+iota-macros.workspace = true
 iota-metrics.workspace = true
 iota-network-stack.workspace = true
 iota-protocol-config.workspace = true
@@ -39,8 +42,6 @@ rustls.workspace = true
 serde.workspace = true
 shared-crypto.workspace = true
 strum_macros.workspace = true
-iota-macros.workspace = true
-iota-tls.workspace = true
 tap.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
