--- a/narwhal/storage/Cargo.toml
+++ b/narwhal/storage/Cargo.toml
@@ -13,6 +13,8 @@ fastcrypto-tbls.workspace = true
 futures.workspace = true
 iota-common.workspace = true
 iota-macros.workspace = true
+iota-metrics.workspace = true
+iota-protocol-config.workspace = true
 lru.workspace = true
 parking_lot.workspace = true
 prometheus.workspace = true
