feat(tooling-explorer): Rebrand OnTheNetwork.tsx

--- a/apps/ui-kit/package.json
+++ b/apps/ui-kit/package.json
@@ -31,6 +31,7 @@
         },
         "./styles": "./dist/style.css"
     },
+    "types": "./dist/index.d.ts",
     "dependencies": {
         "@fontsource/inter": "^5.0.17",
         "@iota/ui-icons": "workspace:*",
