--- a/.github/workflows/_rust.yml
+++ b/.github/workflows/_rust.yml
@@ -5,6 +5,11 @@ on:
     inputs:
       isRust:
         type: boolean
+    secrets:
+      SSH_PRIVATE_KEY_IOTA_CI:
+        required: true
+      SSH_GITHUB_KNOWN_HOSTS:
+        required: true
 
 env:
   CARGO_TERM_COLOR: always
@@ -34,11 +39,13 @@ jobs:
     uses: ./.github/workflows/_rust_lints.yml
     with:
       isRust: ${{ inputs.isRust }}
+    secrets: inherit
 
   external-lints:
     uses: ./.github/workflows/_external_rust_lints.yml
     with:
       isRust: ${{ inputs.isRust }}
+    secrets: inherit
 
   rust-tests:
     needs:
