--- a/crates/iota-storage/Cargo.toml
+++ b/crates/iota-storage/Cargo.toml
@@ -64,3 +64,7 @@ tempfile.workspace = true
 iota-macros = { workspace = true }
 iota-test-transaction-builder.workspace = true
 iota-types = { workspace = true, features = ["test-utils"] }
+
+[target.'cfg(msim)'.dev-dependencies]
+iota-simulator.workspace = true
+rustls = "0.23"
