--- a/external-crates/move/crates/move-analyzer/editors/code/package.json
+++ b/external-crates/move/crates/move-analyzer/editors/code/package.json
@@ -2,7 +2,7 @@
 	"name": "move",
 	"displayName": "Move",
 	"description": "A Move language integrated development environment for Iota.",
-	"publisher": "mysten",
+	"publisher": "IOTA Foundation",
 	"icon": "images/move.png",
 	"license": "Apache-2.0",
 	"version": "1.0.0",
