--- a/crates/iota-network-stack/Cargo.toml
+++ b/crates/iota-network-stack/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["IOTA Foundation <contact@iota.org>"]
 edition = "2021"
 license = "Apache-2.0"
 publish = false
-description = "Mysten's network tooling"
+description = "IOTA's network tooling"
 
 [dependencies]
 anemo.workspace = true
