--- a/sdk/build-scripts/package.json
+++ b/sdk/build-scripts/package.json
@@ -2,7 +2,7 @@
     "name": "@iota/build-scripts",
     "private": true,
     "author": "IOTA Foundation <contact@iota.org>",
-    "description": "Build scripts for @mysten packages",
+    "description": "Build scripts for @iota packages",
     "version": "0.0.0",
     "license": "Apache-2.0",
     "engines": {
