--- a/sdk/move-bytecode-template/package.json
+++ b/sdk/move-bytecode-template/package.json
@@ -5,9 +5,9 @@
     "type": "module",
     "private": true,
     "scripts": {
-        "build": "wasm-pack build --target nodejs --scope mysten",
-        "build:dev": "wasm-pack build --target nodejs --debug --scope mysten",
-        "build:release": "wasm-pack build --target web --release --scope mysten",
+        "build": "wasm-pack build --target nodejs --scope iota",
+        "build:dev": "wasm-pack build --target nodejs --debug --scope iota",
+        "build:release": "wasm-pack build --target web --release --scope iota",
         "test": "vitest run"
     },
     "author": "IOTA Foundation <contact@iota.org>",
