--- a/.github/workflows/_external_rust_tests.yml
+++ b/.github/workflows/_external_rust_tests.yml
@@ -23,7 +23,7 @@ jobs:
   test:
     name: Test ${{ matrix.components }}
     needs: changes
-    if: always() && inputs.isRust && needs.changes.outputs.components != '[]'
+    if: always() && inputs.isRust && needs.changes.outputs.components != '[]' && github.event.pull_request.draft == false
     env:
       # Tests written with #[sim_test] are often flaky if run as #[tokio::test] - this var
       # causes #[sim_test] to only run under the deterministic `simtest` job, and not the
@@ -50,7 +50,7 @@ jobs:
 
   check-unused-deps:
     name: Check Unused Dependencies of ${{ matrix.components }} (${{ matrix.flags }})
-    if: always() && inputs.isRust && needs.changes.outputs.components != '[]'
+    if: always() && inputs.isRust && needs.changes.outputs.components != '[]' && github.event.pull_request.draft == false
     strategy:
       matrix:
         components: ${{ fromJson(needs.changes.outputs.components) }}
