--- a/docker/iota-node/Dockerfile
+++ b/docker/iota-node/Dockerfile
@@ -15,6 +15,7 @@ COPY crates crates
 COPY iota-execution iota-execution
 COPY narwhal narwhal
 COPY external-crates external-crates
+COPY docs docs
 
 RUN cargo build --profile ${PROFILE} --bin iota-node
 
