--- a/docker/iota-indexer/Dockerfile
+++ b/docker/iota-indexer/Dockerfile
@@ -19,6 +19,7 @@ COPY crates crates
 COPY iota-execution iota-execution
 COPY narwhal narwhal
 COPY external-crates external-crates
+COPY docs docs
 
 RUN cargo build --profile ${PROFILE} --bin iota-indexer
 RUN mv target/$(if [ $PROFILE = "dev" ]; then echo "debug"; else echo "release";fi)/iota-indexer ./
