--- a/narwhal/Docker/Dockerfile
+++ b/narwhal/Docker/Dockerfile
@@ -15,6 +15,7 @@ COPY crates crates
 COPY iota-execution iota-execution
 COPY narwhal narwhal
 COPY external-crates external-crates
+COPY docs docs
 
 RUN cargo build --profile ${PROFILE} --bin narwhal-node
 RUN cargo build --profile ${PROFILE} --features=benchmark --bin narwhal-benchmark-client
